--- a/index.html
+++ b/index.html
@@ -1,77 +1,30 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <meta charset='utf-8'>
-
-  <title>kaaes/color_rotor @ GitHub</title>
-
-  <style type="text/css">
-    body {
-      margin-top: 1.0em;
-      background-color: #6bd3f5;
-      font-family: Helvetica, Arial, FreeSans, san-serif;
-      color: #000000;
-    }
-    #container {
-      margin: 0 auto;
-      width: 700px;
-    }
-    h1 { font-size: 3.8em; color: #942c0a; margin-bottom: 3px; }
-    h1 .small { font-size: 0.4em; }
-    h1 a { text-decoration: none }
-    h2 { font-size: 1.5em; color: #942c0a; }
-    h3 { text-align: center; color: #942c0a; }
-    a { color: #942c0a; }
-    .description { font-size: 1.2em; margin-bottom: 30px; margin-top: 30px; font-style: italic;}
-    .download { float: right; }
-    pre { background: #000; color: #fff; padding: 15px;}
-    hr { border: 0; width: 80%; border-bottom: 1px solid #aaa}
-    .footer { text-align:center; padding-top:30px; font-style: italic; }
+<!DOCTYPE html> 
+<html lang="en"> 
+<head> 
+	<meta charset="utf-8"/> 
+	<title>Canvas Color</title>
+  <link href='http://fonts.googleapis.com/css?family=Architects+Daughter' rel='stylesheet' type='text/css'>	
+	<style type="text/css">
+	body {font-family: 'Architects Daughter', sans-serif; font-size: 1.5em; text-shadow: .1em .1em 0 #ddd; color: #333; background: #fffff0}
+  #content {width: 600px; margin: 0 auto; position: relative; text-align: center}
+  #canvas, #slider {display: block; margin: 0 auto; box-shadow: 0 0 0 2px rgba(255,255,240,1), 0 0 0 3px rgba(0,0,0,.3), 0 0 10px rgba(0,0,0,.5); border-radius: 3px}
+  #canvas {background: #fff}
+  #slider {width: 100%; margin-top: 30px}
+  h1 {font-size: 2em;}
+  h2 {margin-top: 0}
+  a {color: steelblue}
+  .info {font-size: .7em}
   </style>
-</head>
-
-<body>
-  <a href="http://github.com/kaaes/color_rotor"><img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub" /></a>
-
-  <div id="container">
-
-    <div class="download">
-      <a href="http://github.com/kaaes/color_rotor/zipball/master">
-        <img border="0" width="90" src="http://github.com/images/modules/download/zip.png"></a>
-      <a href="http://github.com/kaaes/color_rotor/tarball/master">
-        <img border="0" width="90" src="http://github.com/images/modules/download/tar.png"></a>
-    </div>
-
-    <h1><a href="http://github.com/kaaes/color_rotor">color_rotor</a>
-      <span class="small">by <a href="http://github.com/kaaes">kaaes</a></span></h1>
-
-    <div class="description">
-      Feel the rainbow, stare at rainbow
-    </div>
-
-    <h2>Authors</h2>
-<p>Kasia (kasia@drzyzga.pl)<br/><br/>      </p>
-<h2>Contact</h2>
-<p>Kasia (kasia@drzyzga.pl)<br/>      </p>
-
-
-    <h2>Download</h2>
-    <p>
-      You can download this project in either
-      <a href="http://github.com/kaaes/color_rotor/zipball/master">zip</a> or
-      <a href="http://github.com/kaaes/color_rotor/tarball/master">tar</a> formats.
-    </p>
-    <p>You can also clone the project with <a href="http://git-scm.com">Git</a>
-      by running:
-      <pre>$ git clone git://github.com/kaaes/color_rotor</pre>
-    </p>
-
-    <div class="footer">
-      get the source code on GitHub : <a href="http://github.com/kaaes/color_rotor">kaaes/color_rotor</a>
-    </div>
-
+</head>  
+<body> 
+  <div id="content">
+    <h1>No pictures, baby!</h1>
+    <canvas id="canvas"></canvas> 
+    <p class="info">by <a href="http://twitter.com/kaaes">@kaaes</a></p>
   </div>
-
-  
-</body>
+  <script src="rotor.js"></script>
+  <script type="text/javascript">
+    Rotor.init({canvasWidth: 350, canvasHeight: 350});
+  </script>  
+</body> 
 </html>
